fix scrolling on firefox...

--- a/components/Home/Profile/index.module.css
+++ b/components/Home/Profile/index.module.css
@@ -23,7 +23,7 @@
   padding: 0 15px;
   overflow-x: none;
   overflow-y: auto;
-  overflow-y: overlay;
+  overflow-y: scroll;
   text-align: center;
   flex: 1;
 }
