--- a/components/Home/RecentMatches/index.module.css
+++ b/components/Home/RecentMatches/index.module.css
@@ -27,9 +27,9 @@
   .wrapper {
     display: grid;
     grid-template-columns: repeat(1fr);
-    padding: 0px 10px;
+    padding-left: 10px;
     overflow-x: none;
-    overflow-y: overlay;
+    overflow-y: scroll;
   }
   
   .entry {
