--- a/components/Play/Chat/index.module.css
+++ b/components/Play/Chat/index.module.css
@@ -22,7 +22,7 @@
   flex-grow: 1;
   max-height: 240px;
   flex-direction: column;
-  overflow-y: overlay;
+  overflow-y: scroll;
   padding: 15px;
   border-radius: 16px;
   border: 2px solid var(--border);
